# spectral

./: .gitignore  README.md  app.py  index.js  package-lock.json  pyproject.toml  scrape_data_entry.py
data/: acacia_missed_it.json  acacia_missed_it_1.json  all_trails.json  ant_battle.json  barden_creek_trail.json  black_hawk_down.json  black_hawk_up.json  bum_hole_back.json  creek_dash.json  deanei_run.json  hi_tec.json  hit_the_turps.json  index.js  lo_tec.json  mallee_alley.json  mckenzie_trail.json  mckenzie_trail_1.json  methane_alley.json  methane_alley_return.json  mill_creek_fire_trail.json  package.json  pump_action.json  scribbly.json  tea_cup.json  top_loop.json  toxic_flow.json  twisties.json  up_bardens_creek.json  whipper_snapper.json
src/: config.py  data_models.py
src/data_source/: strava.py
