[tool.poetry]
name = "trail-project"
version = "0.1.0"
description = ""
authors = ["ninz <nreclarin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
